--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- Lucie -->
+    <p>BlaBlabLA Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae tempore dolorem at aliquid quisquam reiciendis error. Libero, doloribus iste? Vitae?</p>
     <!-- Julie -->
     <!-- Théo -->
 </body>
